ReSharper.FSharp/test/data/parsing/errors/Pat - Char range 01.fs
match 'a' with
| 'a' .. 'c' -> ()